--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./owl-slider/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./owl-slider/assets/owl.theme.default.min.css">
-    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
-    <title>Document</title>
+    <title>Car rental</title>
 
 </head>
 <body>
@@ -328,7 +327,7 @@
                             <option value="">02:00 PM</option>
                             <option value="">03:00 PM</option>
                             <option value="">04:00 PM</option>
-                            <option value="">05:00 PM</option>
+                            <option value="">05:00 PM</option> 
                             <option value="">06:00 PM</option>
                             <option value="">07:00 PM</option>
                             <option value="">08:00 PM</option>
