--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./index.css">
@@ -267,7 +266,7 @@
                         </select>                       
                     </div>
                     <div class="mt-3 reserve-input ">
-                        <label for="" class="px-3 py-2 "><i class="fa-solid fa-location-dot me-2"></i>Pick-up</label>
+                        <label for="" class="px-3 py-2 "><i class="fa-solid fa-location-dot me-1"></i>Pick-up</label>
                         <input type="text" name="" id="location" class="d-inline-block border-0 color-yellow city " placeholder="Enter a city or Airport">
                         
                     </div>
@@ -336,7 +335,7 @@
                             <option value="">11:00 PM</option>
                         </select>                            
                     </div>
-                    <button class="h2 fw-bold w-100 mt-5 p-2 border-0 back-yellow text-white submit-reservation">Continue Car Reservation</button>
+                    <button class="h3 fw-bold w-100 mt-5 px-1 py-3 border-0 back-yellow text-white submit-reservation">Continue Car Reservation</button>
                 </form>
             </div>
             <div class="col-lg-6 col-md-11 g-5">
