--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                     </div>
                     <p>Need a different drop-off location?</p>
                     <div class=" mt-4 d-flex">
-                        <div class="reserve-input  w-75">
+                        <div class="reserve-input w-75">
                             <label for="" class="px-3 py-2 w-50"><i class="fa-solid fa-calendar-days me-2 "></i>Pick-up</label>
-                            <input type="date" name="" id="input-pickup-date" class="px-2 py-2 border-0 color-yellow date">
+                            <input type="date" name="" id="input-pickup-date" class=" py-2 border-0 color-yellow date">
                         </div>
                         <select name="" id="input-pickup-time" class="p-2 ms-1 border-1 gray-border bg-white color-yellow time">
                             <option value="">12:00 AM</option>
@@ -306,7 +306,7 @@
                     <div class=" mt-3 d-flex ">
                         <div class="reserve-input w-75">
                             <label for="" class="px-3 py-2 w-50"><i class="fa-solid fa-calendar-days me-2"></i>Drop-off</label>
-                            <input type="date" name="" id="input-dropoff-date" class=" p-2 border-0 color-yellow date">
+                            <input type="date" name="" id="input-dropoff-date" class=" py-2 border-0 color-yellow date">
                         </div>                       
                         <select name="" id="input-dropoff-time" class="p-2 ms-1 border-1 gray-border bg-white color-yellow time">
                             <option value="">12:00 AM</option>
