--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </div>
 
     <!-- scroll to top button -->
-    <button class="position-fixed scroll-btn back-dark-gray border-0 text-white"><i class="fa-solid fa-angle-up"></i></button>
+    <button class="position-fixed scroll-btn back-yellow border-0 text-white"><i class="fa-solid fa-angle-up"></i></button>
 
     <!-- langauge -->
     <div class="container-fluid language">
@@ -202,7 +202,7 @@
 
     <!-- navbar -->
 
-    <nav class=" container-fluid navbar navbar-expand-lg">
+    <nav class=" container-fluid navbar navbar-expand-lg ">
         <div class="container">
                 <a class="h1 fw-bold positon-relative text-decoration-none color-gray head-link" href="#">CAR<span class="ms-3">RENTAL</span><h6 class="mt-1">TOP CAR RENTAL DEALS-SAVE BIG!</h6></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
