--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                                 Blog
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="./blogpost.html">Blog Posts</a></li>
+                                <li><a class="dropdown-item" href="./Blog_Single_post.html">Blog Single Page</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="./error404.html">Error 404</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item h5 me-2">
@@ -1257,6 +1257,8 @@
             </div>
         </div>
     </div>
+
+    <!-- footer -->
 
     <div class="container-fluid back-gray">
         <div class="row d-flex justify-content-center align-item-center gap-5">
